Ineffectual fumblings towards a couple of star 2s